# energy-balance-model

./: .mplstyle  README.md  pyproject.toml
configs/: default.toml
data/: earth_18lat.csv  earth_36lat.csv
notebooks/: climate_sens_S0.ipynb  exploration.ipynb
scripts/: run_entropy_production.py  run_model.py
src/ebm1d/: __init__.py  config.py  constants.py  core.py  inputs.py  model.py
src/numerical_tools/: ode_solver.py
tests/: test.py
