[project]
name = "energy-balance-model"
version = "0.1.0"
description = "Energy Balance Model (EBM) and analysis of climate sensitivity to the solar constant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
]
